--- a/Cric App/PredictCwc.html
+++ b/Cric App/PredictCwc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head> 
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -15,6 +15,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <style>
+	.tab-heading{
+	color:red;
+	}
+	
         table {
             border-collapse: collapse;
             /*remove spaces within cells */
@@ -90,7 +94,7 @@
         </div> -->
     
         <div class="col-md-8">
-            <h3>All Combinations</h3>
+            <h3 class="tab-heading">Cricket World Cup - All Combinations</h3>
             <table id="tbl-details">
                 <tr>
                     <th class="heading" style="text-align: right;padding-right: 10px;">versus</th>
@@ -268,9 +272,9 @@
             </table>
         </div>
         <div class="col-md-4">
-            <h2>
+            <h3 class="tab-heading">
                 Qualification Chance
-            </h2>
+            </h3>
             <table id="tbl-chances">
                 <tr>
                     <th>Teams</th>
